--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GOOGLE_ID=955801869193-3a2pgiti5b3hnjdpe5fid6snt499tn05.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+MONGODB_URI=mongodb+srv://xuluv911:VgqkrkiIyzz9I1yU@cluster0.8mefgre.mongodb.net/?retryWrites=true&w=majority
