--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 GOOGLE_ID=955801869193-3a2pgiti5b3hnjdpe5fid6snt499tn05.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 MONGODB_URI=mongodb+srv://xuluv911:VgqkrkiIyzz9I1yU@cluster0.8mefgre.mongodb.net/?retryWrites=true&w=majority
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_SECRET=pvaNXzJDIpQE0xMAe9By+SiVx0JTvpKRtXoP9jWZWQU=
+
